crates/nash-report/src/snapshots/nash_report__json__tests__elm_schema_preserves_primary_span_and_styles.snap
---
source: crates/nash-report/src/json.rs
description: "Code:\n\nmain =\n    missing"
---
{
  "name": "Main",
  "path": "src/Main.nash",
  "problems": [
    {
      "code": "nash::diagnostic",
      "labels": [
        {
          "primary": true,
          "region": {
            "end": {
              "column": 12,
              "line": 2
            },
            "start": {
              "column": 5,
              "line": 2
            }
          },
          "text": ""
        }
      ],
      "message": [
        "I cannot find this name:\n\nTry ",
        {
          "bold": false,
          "color": "GREEN",
          "string": "found",
          "underline": false
        },
        "."
      ],
      "region": {
        "end": {
          "column": 12,
          "line": 2
        },
        "start": {
          "column": 5,
          "line": 2
        }
      },
      "related": [],
      "severity": "error",
      "suggestions": [
        "found"
      ],
      "title": "NAMING ERROR"
    }
  ]
}
