crates/nash-report/src/snapshots/nash_report__json__tests__paired_regions_are_self_contained.snap
---
source: crates/nash-report/src/json.rs
expression: "serde_json::to_string_pretty(&report_to_json(&report)).unwrap()"
---
{
  "code": "nash::diagnostic",
  "labels": [
    {
      "primary": true,
      "region": {
        "end": {
          "column": 2,
          "line": 2
        },
        "start": {
          "column": 1,
          "line": 2
        }
      },
      "text": "second"
    },
    {
      "primary": false,
      "region": {
        "end": {
          "column": 2,
          "line": 1
        },
        "start": {
          "column": 1,
          "line": 1
        }
      },
      "text": "first"
    }
  ],
  "message": [
    "Both names occur here:\n\nChoose another name."
  ],
  "region": {
    "end": {
      "column": 2,
      "line": 2
    },
    "start": {
      "column": 1,
      "line": 2
    }
  },
  "related": [],
  "severity": "error",
  "suggestions": [],
  "title": "NAME CLASH"
}
